<resources>
    <string name="app_name">Comandit Cliente</string>
    <string name="title_comanda">Comanda</string>
    <string name="title_pedidos">Pedidos</string>
    <string name="title_cardapio">Cardápio</string>

    <!--    Logger      -->
    <string name="api_exception">APIException</string>
    <string name="comm_failure">CommunicationFailure</string>

    <!--    Toast Messages      -->
    <string name="requestError">Erro de comunicação. Verifique sua conexão Wi-Fi.</string>
    <string name="accountLoadindError">Erro ao consultar a conta da comanda</string>

    <!--    Tela Login      -->
    <string name="title_activity_login">@string/app_name</string>
    <string name="prompt_comanda">Comanda</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Bem vindo(a) !"</string>
    <string name="invalid_comanda">Comanda inválida</string>
    <string name="invalid_password">Senha inválida</string>
    <string name="login_failed">"Login falhou"</string>
    <string name="login_qr_code">Entrar com QR Code</string>
    <string name="informativo_login">Solicite sua senha de acesso ou seu QR code a um atendente</string>
    <string name="qrcode">QRCode</string>
    <string name="qrcode_scan_prompt">Utilize o botão de volume para ativar o flash (+ Lig. | - Desl.)</string>

    <!--    Tela Comanda    -->
<!--    <string name="client_logo_url">http://note-acer:3312/comandit/cliente/api/client_logo.jpg</string>-->
    <string name="client_logo_url">http://workstation:3312/comandit/cliente/api/client_logo.jpg</string>
    <string name="sua_conta">Sua conta</string>
    <string name="comanda_ativa_desde">Comanda ativa desde</string>
    <string name="logo_cliente">logo_cliente</string>
    <string name="quantidade_pedidos">Quantidade pedidos</string>
    <string name="taxa_servico">Taxa Serviço</string>
    <string name="valor_pedidos">Valor pedidos</string>
    <string name="valor_servico">Valor serviço</string>
    <string name="valor_couvert">Valor couvert</string>
    <string name="valor_total">Valor total</string>

    <!--    Item Pedido     -->
    <string name="order_clock_image">order_clock_image</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="qtde">Qtde</string>
    <string name="hora_pedido">Hora Pedido</string>
    <string name="valor_pedido">Valor Pedido</string>
    <string name="observacao_pedido">Observacão Pedido</string>
    <string name="no_products">Não há produtos cadastrados nesta categoria</string>
    <string name="status">Status</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="cardapio_produto_indisponivel">Indisponível</string>
    <string name="invalid_qrcode">QR Code inválido</string>
    <string name="categorias">Categorias</string>
    <string name="labelitemconta">LabelItemConta</string>
    <string name="valueitemconta">ValueItemConta</string>
    <string name="data_hora_abertura_comanda">16/07/20 20:00</string>
    <string name="numero_mesa">Mesa 1</string>
    <string name="numero_comanda">001</string>
    <string name="chamar_atendente_icon">Chamar atendente</string>
    <string name="chamado_atendente_registrado">Chamado ao atendente registrado</string>

</resources>
