<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:rowCount="3"
    android:columnCount="2">

    <TextView
        android:id="@+id/nome_produto"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_rowSpan="2"
        android:textStyle="bold"
        android:text="@string/nome_do_produto" />

    <TextView
        android:id="@+id/quantidade_pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="end"
        android:text="@string/qtde" />

    <LinearLayout
        android:id="@+id/hora_pedido_layout"
        android:layout_row="1"
        android:layout_column="0"
        tools:ignore="UseCompoundDrawables"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_baseline_access_time_24"
            android:contentDescription="@string/order_clock_image" />

        <TextView
            android:id="@+id/hora_pedido"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/hora_pedido" />

    </LinearLayout>

    <TextView
        android:id="@+id/valor_pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_row="1"
        android:layout_column="1"
        android:textStyle="bold"
        android:text="@string/valor_pedido"/>

    <TextView
        android:id="@+id/observacao_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textStyle="italic"
        android:text="@string/observacao_pedido"
        android:visibility="visible"/>

</GridLayout>