<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_comanda">

    <fragment
        android:id="@+id/navigation_comanda"
        android:name="br.com.alloy.comanditcliente.ui.comanda.ComandaFragment"
        android:label="@string/title_comanda"
        tools:layout="@layout/fragment_comanda" />

    <fragment
        android:id="@+id/navigation_pedidos"
        android:name="br.com.alloy.comanditcliente.ui.pedidos.PedidosFragment"
        android:label="@string/title_pedidos"
        tools:layout="@layout/fragment_pedidos" />

    <fragment
        android:id="@+id/navigation_cardapio"
        android:name="br.com.alloy.comanditcliente.ui.cardapio.CardapioFragment"
        android:label="@string/title_cardapio"
        tools:layout="@layout/fragment_cardapio" />

</navigation>