<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nome_produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/nome_do_produto" />

        <TextView
            android:id="@+id/ingredientes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textStyle="italic"
            android:text="@string/ingredientes" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textStyle="italic"
            android:text="@string/status"
            android:visibility="visible"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/foto_produto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_weight="0"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_restaurant_menu_black_24dp" />

</LinearLayout>